--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
-.container{
+.ContainerMain{
     background: blue;
+    align-items: center;
+    flex-direction: row;
     padding: 25pt;
     border-radius: 10%;
 }
